# alpacapella-model

./: .gitignore  config.toml  pyproject.toml
src/alpacapella_model/: __init__.py  dataset.py  loss.py  model.py  training.py  transformer.py
